# FSE

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  Doxyfile  FSE.sln  License.txt  README.md  build_linux.sh  create_fse_chai_cheatsheet.rb  fse_chai_cheatsheet.md  index.md  makefile  settings.json
Android/FSE_TEST/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Android/FSE_TEST/app/src/androidTest/java/de/flatspotsoftware/fse_test/: ExampleInstrumentedTest.java
Android/FSE_TEST/app/src/main/: AndroidManifest.xml
Android/FSE_TEST/app/src/main/cpp/: TestApp.cpp  TestApp.h  main.cpp
Android/FSE_TEST/app/src/main/cpp/FSEObject/: GameHandler.cpp  GameHandler.h
Android/FSE_TEST/app/src/main/java/de/flatspotsoftware/fse_test/: CPPCallIns.java  CPPCallbacks.java
Android/FSE_TEST/app/src/main/java/de/flatspotsoftware/fse_test/activity/: TestNativeActivity.java
Android/FSE_TEST/app/src/main/res/values/: strings.xml
Android/FSE_TEST/app/src/test/java/de/flatspotsoftware/fse_test/: ExampleUnitTest.java
Android/FSE_TEST/gradle/wrapper/: gradle-wrapper.properties
DemoProject/: BrickBackground.cpp  BrickBackground.h  CeilingLamp.cpp  CeilingLamp.h  DemoApp.cpp  DemoApp.h  DemoProject.vcxproj  DemoProject.vcxproj.filters  TestScriptComponent.chai  TestScriptObjectChild.chai  debug_level.json  imgui.ini  main.cpp  test.chai  test.json  test2.json
DemoProject/FSEObject/: ConcreteBlock.cpp  ConcreteBlock.h  GameLevel.cpp  GameLevel.h  MainMenu.cpp  MainMenu.h
DemoProject/data/: check.plist
FSE/: .clang-tidy  Application.cpp  Application.h  AssetLoader.cpp  AssetLoader.h  ChaiInitClasses.h  EngineCore.cpp  EngineCore.h  EventBus.cpp  EventBus.h  FMath.cpp  FMath.h  FSE.vcxproj  FSE.vcxproj.filters  FSEChaiLib.cpp  FSEChaiLib.h  FSEV8Lib.cpp  FSEV8Lib.h  Game.cpp  Game.h  ImageOutlineFinder.cpp  ImageOutlineFinder.h  Input.cpp  Input.h  NetworkHandler.cpp  NetworkHandler.h  PhysContactListener.cpp  PhysContactListener.h  PhysDebugDraw.cpp  PhysDebugDraw.h  Random.cpp  Random.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneDebugger.cpp  SceneDebugger.h  Serialize.cpp  Serialize.h  (+7 more)
FSE.xcodeproj/: project.pbxproj
FSE.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FSE.xcodeproj/project.xcworkspace/xcuserdata/alia5.xcuserdatad/: UserInterfaceState.xcuserstate
FSE.xcodeproj/xcuserdata/alia5.xcuserdatad/xcschemes/: FSE.xcscheme  xcschememanagement.plist
FSE/Component/: Component.cpp  Component.h  ScriptComponent.cpp  ScriptComponent.h  SmoothViewController.cpp  SmoothViewController.h  ViewController.cpp  ViewController.h
FSE/FSE-ImGui/: imgui-colorpicker.cpp  imgui-colorpicker.h  imgui-plotvar.cpp  imgui-plotvar.h
FSE/FSEObject/: ChaiConsole.cpp  ChaiConsole.h  DummyObject.cpp  DummyObject.h  FPSCounter.cpp  FPSCounter.h  FSELightWorld.cpp  FSELightWorld.h  FSEObject.cpp  FSEObject.h  JSConsole.cpp  JSConsole.h  KillVolume.cpp  KillVolume.h  LoadingScreen.cpp  LoadingScreen.h  ScriptObject.cpp  ScriptObject.h  TileMap.cpp  TileMap.h  Timer.cpp  Timer.h
FSE/GameObject/: DummyObject.cpp  DummyObject.h  FPSCounter.cpp  FPSCounter.h  GameObject.cpp  GameObject.h  LoadingScreen.cpp  LoadingScreen.h  Timer.cpp  Timer.h
FSE/Lights/: BaseLight.cpp  BaseLight.h  FSELightWorld.cpp  FSELightWorld.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
FSE/Network/: NetworkHandler.cpp  NetworkHandler.h  NetworkedObject.cpp  NetworkedObject.h  PacketHandler.cpp  PacketHandler.h
FSE/V8Debug/: WebSocketServer.cpp  WebSocketServer.h  v8DebugUtils.h  v8Inspector.cpp  v8Inspector.h  v8InspectorChannel.cpp  v8InspectorChannel.h  v8InspectorClient.cpp  v8InspectorClient.h
FSE/extv8bind/: liquidfunbind.h  liquidfunconvert.h  sfmlbind.h  sfmlconvert.h
FSE/js/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
FSE/js/src/: ScriptComponent.ts  ScriptObject.ts  index.ts
FSE/js/src/copy/: MouseViewController.ts
FSE/js/src/default/: SceneExtensions.ts  ScriptComponent.ts  ScriptObject.ts  index.ts  util.ts
FSE/js/types/: fse.d.ts  fseGenCopy.d.ts  index.d.ts  lf.d.ts  sf.d.ts
LTBL2/: LetThereBeLight.cpp  LetThereBeLight.hpp  README.md
LTBL2/examples/: main.cpp
LTBL2/src/: LightDirectionEmission.cpp  LightPointEmission.cpp  LightPointEmission.hpp  LightResources.hpp  LightShape.cpp  LightShape.hpp  LightSystem.cpp  LightSystem.hpp  Sprite.cpp  Sprite.hpp  Utils.hpp
RefactorSandbox/: DebugObject.cpp  DebugObject.h  RefactorBox.cpp  RefactorBox.h  RefactorSandbox.vcxproj  RefactorSandbox.vcxproj.filters  main.cpp
RefactorSandbox/config/: keybinds.cfg
extlibs/SFML-2.5.1-x64/lib/: sfml-audio-s.lib  sfml-graphics-s.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-s.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-window-s.lib
extlibs/asio/include/asio/detail/: config.hpp
extlibs/liquidfun/liquidfun/Box2D/: CMakeCache.txt
extlibs/liquidfun/liquidfun/Box2D/Box2D/Common/: b2IntrusiveList.h
extlibs/liquidfun/liquidfun/Box2D/Box2D/Dynamics/: b2World.cpp
extlibs/liquidfun/liquidfun/Box2D/Box2D/Particle/: b2ParticleSystem.cpp  b2ParticleSystem.h
extlibs/rttr-0.9.6-x64/lib/: rttr_core_s.exp  rttr_core_s.lib  rttr_core_s_d.exp  rttr_core_s_d.lib
imgui-1.49/: imgui-SFML.cpp
imgui-1.51/: imconfig.h  imgui-SFML.cpp
imgui-sfml-config/: imconfig.h
liquidfun_contrib/ConvexDecomposition/: b2Polygon.h  b2Triangle.h
